--- a/style.css
+++ b/style.css
@@ -3,7 +3,34 @@
   padding: 0;
 }
 
-@media (min-width: 1029px) {
+/* .menu{
+  width: 50%;
+  height: 70%;
+  position: absolute;
+  display: flex;
+ top: 20%;
+ left: 45%;
+ background-color: black;
+ backdrop-filter: blur(20%);
+}
+
+.menu ul {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  list-style: none;
+  text-decoration: none;
+  color: black;
+
+}
+
+.menu ul li a{
+  text-decoration: none;
+  color: black;
+  font-size: 150%;
+} */
+
+@media (min-width: 501px) {
   #siteName {
     list-style: none;
     text-decoration: none;
@@ -13,7 +40,7 @@
   }
 
   .navbar {
-    background-color: antiquewhite;
+    background-color: #98c482;
     padding: 20px;
     display: flex;
     justify-content: space-between;
@@ -38,241 +65,293 @@
     text-decoration: underline;
     color: white;
   }
+
+  .menuBurger {
+    display: none;
+  }
 }
 
-@media (min-width: 501px) and (max-width: 1028px) {
-    #siteName {
-      list-style: none;
-      text-decoration: none;
-      color: black;
-      font-size: 50px;
-      font-family: Georgia, serif;
-    }
-  
-    .navbar {
-      background-color: antiquewhite;
-
-      padding: 20px;
-      display: flex;
-      justify-content: space-between;
-      box-sizing: border-box;
-      width: 100%;
-      align-items: center;
-    }
-  
-    .navbar .lien ul {
-      list-style: none;
-      display: flex;
-    }
-  
-    .navbar .lien ul li a {
-      text-decoration: none;
-      display: flex;
-      margin: 0 20px;
-      color: black;
-    }
-  
-    .navbar .lien ul li:active a {
-      text-decoration: underline;
-      color: red;
-    }
+@media (max-width: 500px) {
+  #siteName {
+    list-style: none;
+    text-decoration: none;
+    color: black;
+    font-size: 50px;
+    font-family: Georgia, serif;
   }
 
-  @media (max-width: 500px) {
-    #siteName {
-      list-style: none;
-      text-decoration: none;
-      color: black;
-      font-size: 50px;
-      font-family: Georgia, serif;
-    }
-  
-    .navbar {
-      background-color: antiquewhite;
-      padding: 20px;
-      display: block;
-      box-sizing: border-box;
-      width: 100%;
-      align-items: center;
-    }
-  
-    .navbar .lien ul {
-        border-top: 1px solid black;
-        margin-top: 15px;
-      list-style: none;
-      display: block;
-    }
-  
-    .navbar .lien ul li a {
-      text-decoration: none;
-      display: block;
-      margin: 10px;
-      color: black;
-    }
-  
-    .navbar .lien ul li:active a {
-      text-decoration: underline;
-      color: red;
-    }
-  }
-
-  .formulaire{
+  .navbar {
+    background-color: #98c482;
+    padding: 20px;
     display: flex;
-    justify-content: center;
-    margin-top: 50px;
-    padding: 0;
-  
-  }
-  h2{
-margin: 20px;
-  }
-
-  header{
-    display: flex;
-    background-color: black;
-    width: 100vw;
-    height: 30px;
-    color: #f1f1f1;
+    box-sizing: border-box;
+    justify-content: space-between;
+    width: 100%;
     align-items: center;
-    justify-content: center;
-
   }
 
-  .tabFormulaire{
+  .navbar .lien ul {
+    border-top: 1px solid black;
+    margin-top: 15px;
+    list-style: none;
+    display: none;
+  }
+
+  .navbar .lien ul li a {
+    text-decoration: none;
+    display: block;
+    margin: 10px;
+    color: black;
+  }
+
+  .navbar .lien ul li:active a {
+    text-decoration: underline;
+    color: white;
+  }
+
+  .menuBurger {
+    width: 30px;
+    height: 30px;
+    color: black;
+    border: 2px solid black;
+    display: block;
+  }
+}
+
+.formulaire {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 50px;
+  padding: 0;
+}
+
+#conditionPar {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 3%;
+}
+
+#conditionPar > input {
+  margin-right: 5px;
+}
+
+.buttonStyle {
+  width: 200px;
+  height: 40px;
+  margin: 10px;
+  border-radius: 20px;
+  color: white;
+  background-color: #4E6DF9;
+  /* background: rgb(9, 50, 236);
+  background: linear-gradient(
+    158deg,
+    rgba(9, 50, 236, 1) 10%,
+    rgba(9, 50, 236, 1) 53%,
+    rgba(0, 212, 255, 1) 97%
+  ); */
+  font-size: 150%;
+  font-weight: bold;
+  /* backdrop-filter: drop-shadow(40px 40px 100px ,red); */
+}
+
+h2 {
+  margin: 20px;
+}
+
+header {
+  display: flex;
+  background-color: black;
+  width: 100vw;
+  height: 30px;
+  color: #f1f1f1;
+  align-items: center;
+  justify-content: center;
+}
+
+.tabFormulaire {
+  border: 3px solid #98c482;
+  background-color: #c4d9ba;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  padding: 20px;
+  backdrop-filter: drop-shadow(4px 4px 10px blue);
+}
+
+.inputForm{
+  width: 70%;
+  height: auto;
+  padding-left: 3px;
+  border-radius: 10px;
+  border: 2px solid #98c482;
+}
+
+.bio{
+  padding-left: 3px;
+  border-radius: 10px;
+  border: 2px solid #98c482;
+}
+
+footer {
+  display: flex;
+  background-color: black;
+  width: 100vw;
+  height: 30px;
+  color: #f1f1f1;
+  align-items: center;
+  justify-content: center;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+@media (max-width: 500px) {
+  #container {
+    margin: 5px;
+    width: 100vw;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+
+    /* repeat(autofit,minmax(150px,1fr)) */
+  }
+
+  .player {
+    width: 75px;
+    height: 125px;
+    margin: 10px;
+    background-color: #c4d9ba;
     border: 1px solid black;
-    margin-bottom: 30px;
-    padding: 20px;
-  }
-
-  footer{
+    padding: 5px;
     display: flex;
-    background-color: black;
-    width: 100vw;
-    height: 30px;
-    color: #f1f1f1;
     align-items: center;
-    justify-content: center;
-  }
-
-  body{
-    display: flex;
     flex-direction: column;
-    min-height:100vh;
+    justify-content: space-around;
+    font-size: 50%;
   }
 
-  .imgBackAcceuil{
+  .player :nth-child(1) {
+    width: 80%;
+    height: 40%;
+  }
+}
 
-    width:100%;
-    height:300px;
-    background-image: url("photo1.avif");
-    background-position:50% 70% ;
-  }
+.imgBackAcceuil {
+  width: 100%;
+  height: 300px;
+  background-image: url("photo1.avif");
+  background-position: 50% 80%;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
 
-  #descriptionAcceuil{
-    margin: 50px;
-  }
+#descriptionAcceuil {
+  margin: 50px;
+}
 
-  #descriptionAcceuil h2{
-    margin-left: 0;
-  }
+#descriptionAcceuil h2 {
+  margin-left: 0;
+}
 
-  #part3{
-    display: flex;
-    padding: 20px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
+#part3 {
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
 
-  }
+#part3 img {
+  width: 50vw;
+  height: auto;
+  margin: 10px;
+}
 
-  #part3 img{
-    width: 50vw;
-    height: auto;
-    margin: 10px;
-  }
-  
-  #sousPart3{
-margin: 30px;
-  }
+#sousPart3 {
+  margin: 30px;
+}
 
-  #sousPart3 h3{
-    margin-bottom: 10px;
-  }
-  
+#sousPart3 h3 {
+  margin-bottom: 10px;
+}
 
-  #part4{
-    display: flex;
-    padding: 20px;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: nowrap;
+#part4 {
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
 
-  }
+#part4 img {
+  width: 50vw;
+  height: auto;
+  margin: 10px;
+}
 
-  #part4 img{
-    width: 50vw;
-    height: auto;
-    margin: 10px;
-  }
-  
-  #sousPart4{
-margin: 30px;
-  }
-  
-  #sousPart4 h3{
-    margin-bottom: 10px;
-  }
+#sousPart4 {
+  margin: 30px;
+}
 
-  #sousPart5{
-    margin: 50px;
-  }
-  #part5 img{
-    width: 45vw; height: auto;
-    margin: 10px;
-  }
-  #part5{
-    display: flex;
-    justify-content: center;
-  }
-  #img5{
-    display: flex;
-    flex-direction: column;
-  }
-  
-  #nouveaute{
-    width: 100vw;
-    height: auto;
-    background-color: bisque;
-    display: flex;
- 
-  }
-   
-  #sousNouv1 h3 {
-margin: 30px;
-margin-bottom: 10px;
+#sousPart4 h3 {
+  margin-bottom: 10px;
+}
 
-  }
+#sousPart5 {
+  margin: 50px;
+}
+#part5 img {
+  width: 45vw;
+  height: auto;
+  margin: 10px;
+}
+#part5 {
+  display: flex;
+  justify-content: center;
+}
+#img5 {
+  display: flex;
+  flex-direction: column;
+}
 
-  #sousNouv1{
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    flex-direction: column;
-  }
+#nouveaute {
+  width: 100vw;
+  height: auto;
+  background-color: bisque;
+  display: flex;
+}
 
-  #nouveaute img{
-    width: 30vw;
-    height: auto;
-    margin: 30px;
-  }
+#sousNouv1 h3 {
+  margin: 30px;
+  margin-bottom: 10px;
+}
 
-  #sousNouv1 p{
-    margin: 30px;
-    margin-right: 10px;
-    margin-top: 10px;
-  }
+#sousNouv1 {
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+}
 
-  #container{
+#nouveaute img {
+  width: 30vw;
+  height: auto;
+  margin: 30px;
+}
+
+#sousNouv1 p {
+  margin: 30px;
+  margin-right: 10px;
+  margin-top: 10px;
+}
+
+@media (min-width: 501px) {
+  #container {
     margin: 5px;
     width: 100vw;
     height: auto;
@@ -282,12 +361,12 @@ margin-bottom: 10px;
     /* repeat(autofit,minmax(150px,1fr)) */
   }
 
-  .player{
-    width:150px;
+  .player {
+    width: 150px;
     height: 250px;
     margin: 10px;
 
-    background-color: aqua;
+    background-color: #c4d9ba;
     border: 1px solid black;
     padding: 5px;
     display: flex;
@@ -296,8 +375,23 @@ margin-bottom: 10px;
     justify-content: space-around;
   }
 
-  .player :nth-child(1){
+  .player :nth-child(1) {
     width: 80%;
     height: 40%;
   }
+}
+
+#addPlayer {
+  width: 30px;
+  height: 30px;
+}
+
+#linkAdd{
+  width: fit-content;
+}
+
+#editProfile{
+  display: flex;
+  justify-content: center;
+}
 
