--- a/style.css
+++ b/style.css
@@ -3,33 +3,6 @@
   padding: 0;
 }
 
-/* .menu{
-  width: 50%;
-  height: 70%;
-  position: absolute;
-  display: flex;
- top: 20%;
- left: 45%;
- background-color: black;
- backdrop-filter: blur(20%);
-}
-
-.menu ul {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  list-style: none;
-  text-decoration: none;
-  color: black;
-
-}
-
-.menu ul li a{
-  text-decoration: none;
-  color: black;
-  font-size: 150%;
-} */
-
 @media (min-width: 501px) {
   #siteName {
     list-style: none;
@@ -78,23 +51,39 @@
     color: black;
     font-size: 50px;
     font-family: Georgia, serif;
+    margin: 20px;
   }
 
   .navbar {
     background-color: #98c482;
-    padding: 20px;
+
     display: flex;
     box-sizing: border-box;
     justify-content: space-between;
-    width: 100%;
     align-items: center;
+    width: 100%;
+
   }
 
   .navbar .lien ul {
-    border-top: 1px solid black;
     margin-top: 15px;
     list-style: none;
-    display: none;
+    font-size: 150%;
+    height: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+
+  .navbar .lien{
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+display: none;
+align-self: flex-start;
+justify-content: center;
+align-items: center;
+backdrop-filter: blur(7px); 
   }
 
   .navbar .lien ul li a {
@@ -110,11 +99,11 @@
   }
 
   .menuBurger {
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     color: black;
-    border: 2px solid black;
     display: block;
+    margin: 20px;
   }
 }
 
@@ -143,7 +132,7 @@
   margin: 10px;
   border-radius: 20px;
   color: white;
-  background-color: #4E6DF9;
+  background-color: #4e6df9;
   /* background: rgb(9, 50, 236);
   background: linear-gradient(
     158deg,
@@ -153,6 +142,7 @@
   ); */
   font-size: 150%;
   font-weight: bold;
+  border: 2px solid#3053f1;
   /* backdrop-filter: drop-shadow(40px 40px 100px ,red); */
 }
 
@@ -176,10 +166,9 @@ header {
   border-radius: 10px;
   margin-bottom: 30px;
   padding: 20px;
-  backdrop-filter: drop-shadow(4px 4px 10px blue);
 }
 
-.inputForm{
+.inputForm {
   width: 70%;
   height: auto;
   padding-left: 3px;
@@ -187,10 +176,11 @@ header {
   border: 2px solid #98c482;
 }
 
-.bio{
+.bio {
   padding-left: 3px;
   border-radius: 10px;
   border: 2px solid #98c482;
+  margin: 0%;
 }
 
 footer {
@@ -212,13 +202,11 @@ body {
 @media (max-width: 500px) {
   #container {
     margin: 5px;
-    width: 100vw;
+    margin-top: 20px;
+    width: auto;
     height: auto;
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-
-    /* repeat(autofit,minmax(150px,1fr)) */
   }
 
   .player {
@@ -239,6 +227,58 @@ body {
     width: 80%;
     height: 40%;
   }
+
+  .tabFormulaire {
+    border: 3px solid #98c482;
+    background-color: #c4d9ba;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 20px;
+    width: 70vw;
+    height: auto;
+  }
+
+  #part3 {
+    display: flex;
+    padding: 20px;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #part3 img {
+    width: 75vw;
+    height: auto;
+    margin: 10px;
+  }
+
+  #sousPart3 {
+    margin: 30px;
+  }
+
+  #sousPart3 h3 {
+    margin-bottom: 10px;
+  }
+
+  #part4 {
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  #part4 img {
+    width: 70vw;
+    height: auto;
+    margin: 10px;
+  }
+
+  #sousPart4 {
+    margin: 30px;
+  }
+
+  #sousPart4 h3 {
+    margin-bottom: 10px;
+  }
 }
 
 .imgBackAcceuil {
@@ -256,50 +296,6 @@ body {
 
 #descriptionAcceuil h2 {
   margin-left: 0;
-}
-
-#part3 {
-  display: flex;
-  padding: 20px;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-
-#part3 img {
-  width: 50vw;
-  height: auto;
-  margin: 10px;
-}
-
-#sousPart3 {
-  margin: 30px;
-}
-
-#sousPart3 h3 {
-  margin-bottom: 10px;
-}
-
-#part4 {
-  display: flex;
-  padding: 20px;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: nowrap;
-}
-
-#part4 img {
-  width: 50vw;
-  height: auto;
-  margin: 10px;
-}
-
-#sousPart4 {
-  margin: 30px;
-}
-
-#sousPart4 h3 {
-  margin-bottom: 10px;
 }
 
 #sousPart5 {
@@ -351,16 +347,6 @@ body {
 }
 
 @media (min-width: 501px) {
-  #container {
-    margin: 5px;
-    width: 100vw;
-    height: auto;
-    display: flex;
-    flex-wrap: wrap;
-
-    /* repeat(autofit,minmax(150px,1fr)) */
-  }
-
   .player {
     width: 150px;
     height: 250px;
@@ -379,6 +365,73 @@ body {
     width: 80%;
     height: 40%;
   }
+
+  #part3 {
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+
+  #part3 img {
+    width: 50vw;
+    height: auto;
+    margin: 10px;
+  }
+
+  #sousPart3 {
+    margin: 30px;
+  }
+
+  #sousPart3 h3 {
+    margin-bottom: 10px;
+  }
+
+  #part4 {
+    display: flex;
+    padding: 20px;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+
+  #part4 img {
+    width: 50vw;
+    height: auto;
+    margin: 10px;
+  }
+
+  #sousPart4 {
+    margin: 30px;
+  }
+
+  #sousPart4 h3 {
+    margin-bottom: 10px;
+  }
+}
+
+@media (min-width: 501px) and (max-width: 1200px) {
+  #container {
+    margin: 5px;
+    margin-top: 20px;
+    width: 100vw;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+  }
+}
+
+@media (min-width: 1201px) {
+  #container {
+    margin: 5px;
+    margin-top: 20px;
+    width: 1100px;
+    height: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-self: center;
+  }
 }
 
 #addPlayer {
@@ -386,12 +439,65 @@ body {
   height: 30px;
 }
 
-#linkAdd{
+#linkAdd {
   width: fit-content;
 }
 
-#editProfile{
-  display: flex;
+#editProfile {
+  width: 100vw;
+  display: none;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  padding: 0px;
+  margin-top: 20px;
 }
 
+#profile{
+  margin: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#partProfil {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 20px;
+}
+
+#photoContainer{
+  width: 150px;
+  height: 150px;
+  border-radius: 100%;
+  background-image: url("photo1.avif");
+  background-size: cover;
+  display: flex;
+ align-self: center;
+}
+
+#profileContainer{
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  border: 3px solid #98c482;
+  background-color: #c4d9ba;
+  border-radius: 10px;
+  margin-bottom: 30px;
+  padding: 20px;
+  width: 70vw;
+  height: auto;
+}
+
+#username{
+  font-size: 150%;
+  font-weight: bold;
+  display: flex;
+  margin: 10px;
+  align-self: center;
+}
+
+#bio{
+  margin-top: 10px;
+}
